--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>hello</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/script.js"></script>
+	<meta charset="utf-8">
+	<title>exercise</title>
 </head>
 <body>
- <h1>Hello, world</h1>
+	<h1 id="nopoint">我就试一下</h1>
+	<a href="https://nodejs.org/en/#download" class="popup">link</a>
+	<script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
